Fix not aligned tooltip in ESP and use only 3 decimals

--- a/app/javascript/app/styles/themes/chart-tooltip/chart-tooltip.scss
+++ b/app/javascript/app/styles/themes/chart-tooltip/chart-tooltip.scss
@@ -60,7 +60,7 @@
 
 .labelValue {
   color: $dark-gray;
-  min-width: 30px;
+  text-align: right;
 }
 
 .notAvailable {
